<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.StatisticalTrendFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/fragment_statistical_trend_text1"
        android:textColor="@color/my_light_primary"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.03" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.github.mikephil.charting.charts.BarChart
                android:id="@+id/barChart1"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:visibility="visible" />

            <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/pieChart"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:visibility="gone" />

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/lineChart"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:visibility="gone" />

            <com.github.mikephil.charting.charts.BarChart
                android:id="@+id/barChart2"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="@color/my_light_primary"
                android:textSize="20sp"
                tools:text="Description" />

        </LinearLayout>
    </ScrollView>

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:backgroundTint="@color/my_light_primary2"
        android:contentDescription="@string/fragment_statistical_trend_imgbutton_back"
        android:src="@drawable/baseline_arrow_back_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.97" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:backgroundTint="@color/my_light_primary2"
        android:contentDescription="@string/fragment_statistical_trend_imgbutton_next"
        android:src="@drawable/baseline_arrow_forward_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.97" />

    <TextView
        android:id="@+id/textViewBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_statistical_trend_text_back"
        android:textColor="@color/my_light_primary"
        app:layout_constraintBottom_toTopOf="@+id/imageButton"
        app:layout_constraintEnd_toEndOf="@+id/imageButton"
        app:layout_constraintStart_toStartOf="@+id/imageButton" />

    <TextView
        android:id="@+id/textViewNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_statistical_trend_text_next"
        android:textColor="@color/my_light_primary"
        app:layout_constraintBottom_toTopOf="@+id/imageButton2"
        app:layout_constraintEnd_toEndOf="@+id/imageButton2"
        app:layout_constraintStart_toStartOf="@+id/imageButton2" />

</androidx.constraintlayout.widget.ConstraintLayout>